Latest News Section compleat

--- a/index.html
+++ b/index.html
@@ -178,7 +178,64 @@
       </div>
     </header>
     <!-- Main Section -->
-    <main class="container"></main>
+    <main class="md:container mx-auto">
+      <!-- Featured bike section  -->
+      <!-- Latest News Section  -->
+      <section class=" my-24 ">
+        <h1 class="font-bold text-5xl text-center mb-12">latest News</h1>
+
+        <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3 ">
+          <!-- Card 1 -->
+          <div class="card bg-base-100  shadow-xl">
+            <figure>
+              <img
+                src="./images/others/latest1.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body space-y-5">
+              <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions ">
+                <button class="btn bg-bike-primary text-white">Read More</button>
+              </div>
+            </div>
+          </div>
+          <!-- Card 2 -->
+          <div class="card bg-base-100  shadow-xl">
+            <figure>
+              <img
+                src="./images/others/latest2.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body space-y-5">
+              <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions ">
+                <button class="btn bg-bike-primary text-white">Read More</button>
+              </div>
+            </div>
+          </div>
+          <!-- Card 3 -->
+          <div class="card bg-base-100  shadow-xl">
+            <figure>
+              <img
+                src="./images/others/latest3.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body space-y-5">
+              <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions ">
+                <button class="btn bg-bike-primary text-white">Read More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- Footer Section -->
     <footer></footer>
   </body>
