Compleat The Website

--- a/index.html
+++ b/index.html
@@ -180,56 +180,326 @@
     <!-- Main Section -->
     <main class="md:container mx-auto">
       <!-- Featured bike section  -->
+      <section class="my-24 lg:container">
+        <h1 class="font-bold text-5xl text-center mb-3">
+          Fetured Bikes In This Year
+        </h1>
+        <p
+          class="text-sm font-semibold text-bike-primary text-center mb-3 lg:mb-12"
+        >
+          Best bike collection
+        </p>
+        <div
+          class="grid grid-cols-1 gap-12 lg:gap-28 md:grid-cols-2 lg:grid-cols-3 mx-auto lg:justify-center"
+        >
+          <div>
+            <img
+              class="mx-auto"
+              src="./images/others/feature-bike.png"
+              alt=""
+            />
+          </div>
+          <div>
+            <img
+              class="mx-auto"
+              src="./images/others/feature-bike.png"
+              alt=""
+            />
+          </div>
+          <div>
+            <img
+              class="mx-auto"
+              src="./images/others/feature-bike.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
       <!-- Latest News Section  -->
-      <section class=" my-24 ">
+      <section class="my-24">
         <h1 class="font-bold text-5xl text-center mb-12">latest News</h1>
 
-        <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3 ">
+        <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
           <!-- Card 1 -->
-          <div class="card bg-base-100  shadow-xl">
+          <div class="card bg-base-100 shadow-xl">
             <figure>
-              <img
-                src="./images/others/latest1.png"
-                alt="Shoes"
-              />
+              <img src="./images/others/latest1.png" alt="Shoes" />
             </figure>
             <div class="card-body space-y-5">
               <h2 class="card-title">Ducati XDIAVEL S-73</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-              <div class="card-actions ">
-                <button class="btn bg-bike-primary text-white">Read More</button>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-bike-primary text-white">
+                  Read More
+                </button>
               </div>
             </div>
           </div>
           <!-- Card 2 -->
-          <div class="card bg-base-100  shadow-xl">
+          <div class="card bg-base-100 shadow-xl">
             <figure>
-              <img
-                src="./images/others/latest2.png"
-                alt="Shoes"
-              />
+              <img src="./images/others/latest2.png" alt="Shoes" />
             </figure>
             <div class="card-body space-y-5">
               <h2 class="card-title">Ducati XDIAVEL S-73</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-              <div class="card-actions ">
-                <button class="btn bg-bike-primary text-white">Read More</button>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-bike-primary text-white">
+                  Read More
+                </button>
               </div>
             </div>
           </div>
           <!-- Card 3 -->
-          <div class="card bg-base-100  shadow-xl">
+          <div class="card bg-base-100 shadow-xl">
             <figure>
-              <img
-                src="./images/others/latest3.png"
-                alt="Shoes"
-              />
+              <img src="./images/others/latest3.png" alt="Shoes" />
             </figure>
             <div class="card-body space-y-5">
               <h2 class="card-title">Ducati XDIAVEL S-73</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-              <div class="card-actions ">
-                <button class="btn bg-bike-primary text-white">Read More</button>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-bike-primary text-white">
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Happy Client Section -->
+      <section class="my-24">
+        <h1 class="font-bold text-5xl text-center mb-12">
+          Happy <span class="text-bike-primary">Clients says</span>
+        </h1>
+
+        <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
+          <!--Client Card 1 -->
+          <div class="card bg-base-100 shadow-xl">
+            <div class="avatar">
+              <div class="w-24 rounded-full mx-auto">
+                <img src="./images/others/user-1.png" />
+              </div>
+            </div>
+            <div class="card-body space-y-5">
+              <p class="text-base text-center">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <!-- Rating -->
+              <div class="rating flex justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked="checked"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+
+              <h2 class="font-semibold text-sm text-blue-400 text-center">
+                Regina Miles
+              </h2>
+              <h3 class="font-semibold text-sm text-gray-950 text-center">
+                Banker
+              </h3>
+            </div>
+          </div>
+          <!--Client Card 2 -->
+          <div class="card bg-base-100 shadow-xl">
+            <div class="avatar">
+              <div class="w-24 rounded-full mx-auto">
+                <img src="./images/others/user-2.png" />
+              </div>
+            </div>
+            <div class="card-body space-y-5">
+              <p class="text-base text-center">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <!-- Rating -->
+              <div class="rating flex justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked="checked"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <h2 class="font-semibold text-sm text-blue-400 text-center">
+                Regina Miles
+              </h2>
+              <h3 class="font-semibold text-sm text-gray-950 text-center">
+                Banker
+              </h3>
+            </div>
+          </div>
+          <!--Client Card 3 -->
+          <div class="card bg-base-100 shadow-xl">
+            <div class="avatar">
+              <div class="w-24 rounded-full mx-auto">
+                <img src="./images/others/user-3.png" />
+              </div>
+            </div>
+            <div class="card-body space-y-5">
+              <p class="text-base text-center">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <!-- Rating -->
+              <div class="rating flex justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked="checked"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <h2 class="font-semibold text-sm text-blue-400 text-center">
+                Regina Miles
+              </h2>
+              <h3 class="font-semibold text-sm text-gray-950 text-center">
+                Banker
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Question Section  -->
+      <section class="my-24">
+        <h1 class="font-bold text-5xl text-center mb-12">
+          Frequently Asked <span class="text-bike-primary">Questions</span>
+        </h1>
+
+        <div class="hero">
+          <div class="hero-content flex-col lg:flex-row lg:gap-14">
+            <img src="./images/others/faq.png" class="w-full" />
+
+            <!-- Accordion Section -->
+            <div class="space-y-5">
+              <div class="collapse collapse-arrow border border-blue-100">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">
+                  What are the most important things I should know about riding
+                  a bike?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow border border-blue-100">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  How can I tell if my helmet is old and I need a new one?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Harum assumenda porro hic atque vitae, voluptate ut tempora,
+                    quae, inventore explicabo eaque? Delectus, porro.
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow border border-blue-100">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  My bike has been in storage is it safe to ride?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolor ipsam perspiciatis id quae tempora velit, et
+                    reiciendis quia, ut nulla, explicabo in aspernatur
+                    repudiandae odio?
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow border border-blue-100">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  My bike has been in storage is it safe to ride?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolor ipsam perspiciatis id quae tempora velit, et
+                    reiciendis quia, ut nulla, explicabo in aspernatur
+                    repudiandae odio?
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -237,6 +507,40 @@
       </section>
     </main>
     <!-- Footer Section -->
-    <footer></footer>
+    <footer class="footer bg-black text-neutral-content p-10">
+      <div class="md:container mx-auto lg:flex   lg:justify-between">
+        <div>
+          <aside>
+            <ul class="flex gap-2 mb-3">
+              <li><a href="">About</a></li>
+              <li><a href="">Features</a></li>
+            </ul>
+            <ul class="flex gap-2 mb-3">
+              <li><a href="">About</a></li>
+              <li><a href="">Features</a></li>
+              <li><a href="">Pricing</a></li>
+              <li><a href="">Careers</a></li>
+              <li><a href="">Careers</a></li>
+              <li><a href="">Privacy Policy</a></li>
+            </ul>
+
+            <p>© 2020 bike. All rights reserved</p>
+          </aside>
+        </div>
+        <div>
+          <nav>
+            <h6 class="footer-title">Get the App</h6>
+            <div class="grid grid-cols-1 gap-4">
+              <a>
+                <img class="w-36" src="./images/others/android.png" alt="" />
+              </a>
+              <a>
+                <img class="w-36" src="./images/others/ios.png" alt="" />
+              </a>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
